<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="hr.foi.air.solex.activities.companies.UpdateCompanyDataActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            android:fillViewport="true">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_update_company_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="hr.foi.air.solex.activities.companies.UpdateCompanyDataActivity">

                <ImageView
                    android:id="@+id/activity_update_company_iwNewImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="15dp"
                    app:srcCompat="@drawable/company_logo" />

                <TextView
                    android:id="@+id/activity_update_company_tvNewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/activity_update_company_iwNewImage"
                    android:layout_marginTop="11dp"
                    android:text="@string/company_name" />

                <EditText
                    android:id="@+id/activity_update_company_etNewName"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_tvNewName"
                    android:layout_below="@+id/activity_update_company_tvNewName"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />


                <TextView
                    android:id="@+id/activity_update_company_tvNewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_etNewName"
                    android:layout_below="@+id/activity_update_company_etNewName"
                    android:layout_marginTop="17dp"
                    android:text="@string/e_mail_contact" />

                <EditText
                    android:id="@+id/activity_update_company_etNewEmail"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_tvNewEmail"
                    android:layout_below="@+id/activity_update_company_tvNewEmail"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/enter_e_mail"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/activity_update_company_tvNewAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_etNewEmail"
                    android:layout_below="@+id/activity_update_company_etNewEmail"
                    android:layout_marginTop="11dp"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/activity_update_company_etNewAddress"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_tvNewAddress"
                    android:layout_below="@+id/activity_update_company_tvNewAddress"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/enter_address"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/activity_update_company_tvWebPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_etNewAddress"
                    android:layout_below="@+id/activity_update_company_etNewAddress"
                    android:layout_marginTop="11dp"
                    android:text="@string/webpage" />

                <EditText
                    android:id="@+id/activity_update_company_etWebPage"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_tvWebPage"
                    android:layout_below="@+id/activity_update_company_tvWebPage"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/enter_webpage_address"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/activity_update_company_tvDirector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_etWebPage"
                    android:layout_below="@+id/activity_update_company_etWebPage"
                    android:layout_marginTop="11dp"
                    android:text="@string/director" />

                <EditText
                    android:id="@+id/activity_update_company_etDirector"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_tvDirector"
                    android:layout_below="@+id/activity_update_company_tvDirector"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/director_information"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/activity_update_company_tvNumberOfWorkers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_etDirector"
                    android:layout_below="@+id/activity_update_company_etDirector"
                    android:layout_marginTop="11dp"
                    android:text="@string/number_of_workers" />

                <EditText
                    android:id="@+id/activity_update_company_etNumberOfWorkers"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_company_tvNumberOfWorkers"
                    android:layout_below="@+id/activity_update_company_tvNumberOfWorkers"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/enter_number_of_workers"
                    android:inputType="number" />

                <Button
                    android:id="@+id/activity_update_company_btnUpdateData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/activity_update_company_etNumberOfWorkers"
                    android:layout_centerHorizontal="true"
                    android:text="@string/update_data"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>


        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_drawer_header" />
</android.support.v4.widget.DrawerLayout>
