<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="hr.foi.air.solex.activities.developers.UpdateDeveloperDataActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            android:fillViewport="true">


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_update_company_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="hr.foi.air.solex.activities.developers.UpdateDeveloperDataActivity">

                <ImageView
                    android:id="@+id/activity_update_developer_iwNewImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="15dp"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/developer_logo"
                    />

                <TextView
                    android:id="@+id/activity_update_developer_tvNewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_iwNewImage"
                    android:layout_below="@+id/activity_update_developer_iwNewImage"
                    android:layout_marginTop="11dp"
                    android:text="@string/your_name" />

                <EditText
                    android:id="@+id/activity_update_developer_etNewName"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_tvNewName"
                    android:layout_below="@+id/activity_update_developer_tvNewName"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/activity_update_developer_tvNewSurame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_etNewName"
                    android:layout_below="@+id/activity_update_developer_etNewName"
                    android:layout_marginTop="11dp"
                    android:text="@string/your_surname" />

                <EditText
                    android:id="@+id/activity_update_developer_etNewSurname"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_tvNewSurame"
                    android:layout_below="@+id/activity_update_developer_tvNewSurame"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/enter_surname"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/activity_update_developer_tvNewAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_etNewSurname"
                    android:layout_below="@+id/activity_update_developer_etNewSurname"
                    android:layout_marginTop="17dp"
                    android:text="@string/your_address" />

                <EditText
                    android:id="@+id/activity_update_developer_etNewAddress"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_tvNewAddress"
                    android:layout_below="@+id/activity_update_developer_tvNewAddress"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/enter_address"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/activity_update_developer_tvNewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_etNewAddress"
                    android:layout_below="@+id/activity_update_developer_etNewAddress"
                    android:layout_marginTop="17dp"
                    android:text="@string/your_e_mail" />

                <EditText
                    android:id="@+id/activity_update_developer_etNewEmail"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_tvNewEmail"
                    android:layout_below="@+id/activity_update_developer_tvNewEmail"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/enter_e_mail"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/activity_update_developer_tvNewNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_etNewEmail"
                    android:layout_below="@+id/activity_update_developer_etNewEmail"
                    android:layout_marginTop="11dp"
                    android:text="@string/your_contact_number" />

                <EditText
                    android:id="@+id/activity_update_developer_etNewNumber"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_tvNewNumber"
                    android:layout_below="@+id/activity_update_developer_tvNewNumber"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/enter_contact_number"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/activity_update_developer_tvNewYears"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_etNewNumber"
                    android:layout_below="@+id/activity_update_developer_etNewNumber"
                    android:layout_marginTop="11dp"
                    android:text="@string/your_years_of_experience" />

                <EditText
                    android:id="@+id/activity_update_developer_etNewYears"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_update_developer_tvNewYears"
                    android:layout_below="@+id/activity_update_developer_tvNewYears"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/enter_experience"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/activity_update_developer_btnUpdateData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/activity_update_developer_etNewYears"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="25dp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/update" />


            </RelativeLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_drawer_header" />
</android.support.v4.widget.DrawerLayout>

